@@ -3,13 +3,9 @@
 </head>
 <body>
 	<b>Game 7: Baseball</b>
-	<p>One or two players can play.  Standard baseball<br />
-	rules apply.  Press START/PITCH-7 to pitch a ball.<br />
-	Flashing lights will move on the TANDY--12; try to<br />
-	hit the ball by pressing PLAY-2/HIT-7 button.  A<br />
-	button will flash and tones will sound, indicating<br />
-	the result of your at-bat.  Your score will be<br />
-	tracked on the playing board below.</p>
+	<p>
+		One or two players can play.  Standard baseball rules apply.  Press START/PITCH-7 to pitch a ball.  Flashing lights will move on the TANDY--12; try to hit the ball by pressing PLAY-2/HIT-7 button.  A button will flash and tones will sound, indicating the result of your at-bat.  Your score will be tracked on the playing board below.
+	</p>
 	
 	<table>
 		<tr>
