@@ -3,16 +3,8 @@
 </head>
 <body>
 	<b>Game 10: Compete</b>
-	<p>In this game two players check their reaction time<br />
-	against each other.  One player is assigned buttons<br />
-	1, 2, 3, and 4; the other player has 9, 10, 11, and 12.<br />
-	Press START to start the game.  The Computer will flash<br />
-	5, 6, 7, and 8 for a short time, and then stop on one of<br />
-	these numbers.  The players must press their button next<br />
-	to the stopped light.  The quickest player wins.  If one<br />
-	player makes a mistake, the other player is given a<br />
-	point.  The first player with 5 points wins - the<br />
-	Computer will flash that player's buttons to show the<br />
-	winner.</p>
+	<p>
+		In this game two players check their reaction time against each other.  One player is assigned buttons 1, 2, 3, and 4; the other player has 9, 10, 11, and 12.  Press START to start the game.  The Computer will flash 5, 6, 7, and 8 for a short time, and then stop on one of these numbers.  The players must press their button next to the stopped light.  The quickest player wins.  If one player makes a mistake, the other player is given a point.  The first player with 5 points wins - the Computer will flash that player's buttons to show the winner.
+	</p>
 </body>
 </html>
