@@ -3,5 +3,103 @@
 </head>
 <body>
 	<b>Game 11: Fire-Away</b>
+	<p>
+		In this game, buttons 1 through 4 represent attacking invaders, and 9 through 12 represent your missile launchers.
+	</p>
+
+	<p>
+		When the game begins, buttons 1 through 4 will begin flashing back and forth.  After a short period of time, a tone will sound, and one of the lights in the center column will flash, representing an attacking invader.
+	</p>
+
+	<p>
+		The invaders attack in the following patterns (either straight ahead of diagonally):
+	</p>
+
+	<table>
+		<tr align=center><td>4</td><td colspan=3><td>3</td><td colspan=3><td>2</td><td colspan=3><td>1</td></tr>
+		<tr align=center><td /><td>&searr;</td><td colspan=3 /><td>&searr;</td><td /><td>&swarr;</td><td colspan=3 /><td>&swarr;</td><td /></tr>
+		<tr align=center><td>&darr;</td><td /><td>&searr;</td><td /><td>&darr;</td><td /><td>&seswar;</td><td /><td>&darr;</td><td /><td>&swarr;</td><td /><td>&darr;</td></tr>
+		<tr align=center><td colspan=3 /><td>&searr;</td><td /><td>&swarr;</td><td /><td>&searr;</td><td /><td>&swarr;</td><td colspan=3 /></tr>
+		<tr align=center><td>8</td><td colspan=3><td>7</td><td colspan=3><td>6</td><td colspan=3><td>5</td></tr>
+		<tr align=center><td colspan=3 /><td>&swarr;</td><td /><td>&searr;</td><td /><td>&swarr;</td><td /><td>&searr;</td><td colspan=3 /></tr>
+		<tr align=center><td>&darr;</td><td /><td>&swarr;</td><td /><td>&darr;</td><td /><td>&seswar;</td><td /><td>&darr;</td><td /><td>&searr;</td><td /><td>&darr;</td></tr>
+		<tr align=center><td /><td>&swarr;</td><td colspan=3 /><td>&swarr;</td><td /><td>&searr;</td><td colspan=3 /><td>&searr;</td><td /></tr>
+		<tr align=center><td>12</td><td colspan=3><td>11</td><td colspan=3><td>10</td><td colspan=3><td>9</td></tr>
+	</table>
+
+	<p>
+		To destroy the attacker, fire one of your missiles.  A flash indicates that you've stopped the enemy's attack, while a flash with a tone indicates that your missile was shot destroyed.
+	</p>
+
+	<table>
+		<tr>
+			<th colspan=3>Scoring</th>
+		</tr>
+		<tr>
+			<td>Number of Invaders<br />Shot Down</td>
+			<td>&nbsp;</td>
+			<td>Flashing Indicator</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">1</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 1</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">2</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 2</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">3</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 3</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">4</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 4</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">5</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 5</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">6</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 6</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">7</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 7</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">8</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 8</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">9</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 9</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">10</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 10</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">11</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 11</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">12 or 13</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 12</td>
+		</tr>
+	</table>
 </body>
 </html>
