@@ -3,5 +3,27 @@
 </head>
 <body>
 	<b>Game 12: Hide'N Seek</b>
+	<p>
+		The goal of this game is to guess 3 numbers, in the correct order, which have been randomly selected by the Computer.  Only buttons 9 through 12 will be used, but may occur more than once within the chosen sequence.
+	</p>
+
+	<p>
+		After you START the game, enter your guess by tapping in a 3-number sequence using buttons 9 through 12.  If guess the exact sequence selected by the Computer, you win!  But, if you do not guess a single number in the correct order, the Computer will display the correct sequence, and the game will be over,  However, if you guess at least 1 number in the correct position, the game will continue, and the Computer will give you the following clues about the correct sequence:
+	</p>
+
+	<table>
+		<tr align=center><td colspan=5>Flashing Indicators</td><td /><td>Correct Number</td><td /><td>Correct Position</td></tr>
+		<tr align=center><td colspan=5>Game Over</td><td /><td>1</td><td /><td>0</td></tr>
+		<tr align=center><td colspan=5>Game Over</td><td /><td>2</td><td /><td>0</td></tr>
+		<tr align=center><td colspan=5>Game Over</td><td /><td>3</td><td /><td>0</td></tr>
+		<tr align=center><td> </td><td>5</td><td> </td><td> </td><td>1</td><td /><td>1</td><td /><td>1</td></tr>
+		<tr align=center><td> </td><td>5</td><td> </td><td>2</td><td>1</td><td /><td>2</td><td /><td>1</td></tr>
+		<tr align=center><td> </td><td>5</td><td>3</td><td>2</td><td>1</td><td /><td>3</td><td /><td>1</td></tr>
+		<tr align=center><td>6</td><td>5</td><td> </td><td>2</td><td>1</td><td /><td>2</td><td /><td>2</td></tr>
+		<tr align=center><td colspan=5>You Win!</td><td /><td>3</td><td /><td>3</td></tr>
+	</table>
+	<p>
+		Try to guess the correct sequence in the fewest tries.
+	</p>
 </body>
 </html>
