@@ -3,9 +3,11 @@
 </head>
 <body>
 	<b>Welcome to the TANDY--12!</b>
-	<p>To begin experiencing the TANDY-12 for yourself, tick<br />
-	the OFF-ON switch.</p>
+	<p>
+		To begin experiencing the TANDY-12 for yourself, tick the OFF-ON switch.
+	</p>
 	<div style='position: relative; width: 100%; height: 0px; padding-bottom: 60%;'>
+		README<br />
 		<embed src="../README" style='position: absolute; width: 100%; border: none;' />
 	</div>
 </body>
