@@ -3,7 +3,8 @@
 </head>
 <body>
 	<b>Game 1: Organ</b>
-	<p>Press the buttons to play different tunes.  Each of<br />
-	the 12 buttons produces a different note.</p>
+	<p>
+		Press the buttons to play different tunes.  Each of the 12 buttons produces a different note.
+	</p>
 </body>
 </html>
