@@ -3,15 +3,12 @@
 </head>
 <body>
 	<b>Setting up the TANDY--12</b>
-	<p>Follow these simple procedures to operate your TANDY--12 Computerized Arcade:</p>
+	<p>
+		Follow these simple procedures to operate your TANDY--12 Computerized Arcade:
+	</p>
 	<ol>
-		<li>Press SELECT button to advance selection until<br />
-		desired game flashes.  Alternatively, simply tap your<br />
-		desired game.  During play, press SELECT again to stop<br />
-		game play.</li>
-		<li>Press START to start (or re-start) a game.  A beep-<br />
-		tone will sound and the selected game number button will<br />
-		start to flash.</li>
+		<li>Press SELECT button to advance selection until desired game flashes.  Alternatively, simply tap your desired game.  During play, press SELECT again to stop game play.</li>
+		<li>Press START to start (or re-start) a game.  A beep-tone will sound and the selected game number button will start to flash.</li>
 		<li>Proceed to play the selected game as described.</li>
 	</ol>
 </body>
