@@ -3,15 +3,8 @@
 </head>
 <body>
 	<b>Game 8: Repeat Plus (for two or more players)</b>
-	<p>This is similar to game 3 except that a player adds<br />
-	one more note after repeating the sequence of notes<br />
-	entered by the previous player.  The Computer starts the<br />
-	game with a single note; the first player must press<br />
-	that key, plus one more.  Then the second player presses<br />
-	the first two and adds one more note.  (The Computer<br />
-	sounds a short beep to tell the next player it is his or<br />
-	her turn).  The third player (or back to the first<br />
-	player) repeats the sequence and adds one more.  So the<br />
-	game continues until one of the player makes a mistake.</p>
+	<p>
+		This is similar to game 3 except that a player adds one more note after repeating the sequence of notes entered by the previous player.  The Computer starts the game with a single note; the first player must press that key, plus one more.  Then the second player presses the first two and adds one more note.  (The Computer sounds a short beep to tell the next player it is his or her turn).  The third player (or back to the first player) repeats the sequence and adds one more.  So the game continues until one of the player makes a mistake.
+	</p>
 </body>
 </html>
