@@ -3,11 +3,9 @@
 </head>
 <body>
 	<b>Game 3: Repeat</b>
-	<p>This game plays similar to the electronic game Simon.<br />
-	The Computer will play a note and wait for you to repeat<br />
-	it.  Each time you successfully copy the entire<br />
-	sequence, the Computer will beep and add another note.<br />
-	If you fail, the Computer will flash buttons 1 and 8.</p>
+	<p>
+		This game plays similar to the electronic game Simon.  The Computer will play a note and wait for you to repeat it.  Each time you successfully copy the entire sequence, the Computer will beep and add another note.  If you fail, the Computer will flash buttons 1 and 8.
+	</p>
 	<table>
 		<tr>
 			<th colspan=3>Scoring</th>
