@@ -3,5 +3,20 @@
 </head>
 <body>
 	<b>Game 6: Roulette</b>
+	<p>
+		Roulette is a casino-style game which can be played by 2 or more players.  The Roulette Wheel is composed of the 10 outer buttons on the Tandy--12.  After the players have placed their, press START to spin the wheel.  A flashing light will begin at button 5 and move clockwise around the wheel.  While the wheel is spinning, the SELECT button will neither exit the current game, nor advance to the next one.  When the light stops moving and a tone sounds, payouts should be done as below:
+	</p>
+
+	<table>
+	</tr><th colspan=3>Scoring</th></tr>
+	<tr><td>Bet Type</td><td>&nbsp;</td><td align=center>Payout</td></tr>
+	<tr><td>Single Number Bet</td><td /><td align=center>8 to 1</td></tr>
+	<tr><td>Split bet</td><td /><td align=center>4 to 1</td></tr>
+	<tr><td>Odd or Even</td><td /><td align=center>1 to 1</td></tr>
+	</table>
+
+	<p>
+		*** NOTE: The wheel will not stop on either numbers 6 or 7.
+	</p>
 </body>
 </html>
