@@ -3,9 +3,8 @@
 </head>
 <body>
 	<b>Game 2: Song Writer</b>
-	<p>Press the buttons to play and record a tune (up to 44<br />
-	notes, including rests).  To include a rest (space) in<br />
-	your song, press PLAY-2/HIT-7.  Press REPEAT-2 to enable<br />
-	looping, and SELECT while playing to disable it.</p>
+	<p>
+		Press the buttons to play and record a tune (up to 44 notes, including rests).  To include a rest (space) in your song, press PLAY-2/HIT-7.  Press REPEAT-2 to enable looping, and SELECT while playing to disable it.  Pressing START will clear the song buffer.
+	</p>
 </body>
 </html>
