@@ -3,5 +3,78 @@
 </head>
 <body>
 	<b>Game 5: Tag-It</b>
+	<p>
+		This game plays much like the classic arcade game Whac-A-Mole.  Upon starting the game, random buttons will flash, one-by-one.  Your goal is to press the lit button as quickly as possible.  If you "whack the mole" quick enough, a short tone will sound, and you will earn a point.  The game continues for 110 tries.  Upon completing a game, your score will be indicated as follows:
+	</p>
+	<table>
+		<tr>
+			<th colspan=3>Scoring</th>
+		</tr>
+		<tr>
+			<td>Number of Moles<br />caught</td>
+			<td>&nbsp;</td>
+			<td>Flashing Indicator</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">0 - 9</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">none</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">10 - 19</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 1</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">20 - 29</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 2</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">30 - 39</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 3</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">40 - 49</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 4</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">50 - 59</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 5</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">60 - 69</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 6</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">70 - 79</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 7</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">80 - 89</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 8</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">90 - 99</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 9</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">100 - 109</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 10</td>
+		</tr>
+		<tr>
+			<td style="text-align:center">110</td>
+			<td>&nbsp;</td>
+			<td style="text-align:center">Button 11<br />( Perfect Score! )</td>
+		</tr>
+	</table>
 </body>
 </html>
