@@ -3,5 +3,8 @@
 </head>
 <body>
 	<b>Game 4: Torpedo</b>
+	<p>
+		After starting the game, press any one of the buttons to fire a torpedo at the enemy sub.  A flashing button with a tone indicates that the sub is on either the same row, or the same column as the button pressed.  You have three shots to sink the sub.  If you miss all three, the correct button will flash, as well as sound its tone.  If you select the proper button, you win, and the Computer will play a victory tune!
+	</p>
 </body>
 </html>
