@@ -3,5 +3,14 @@
 </head>
 <body>
 	<b>Game 9: Treasure Hunt</b>
+	<p>
+		This game is played similarly to the popular game Mastermind.  You must guess, in the correct sequence, the 3 colors which were randomly-selected by the Computer; colors may appear in the sequence more than once.  After entering your guess, the Computer will score your attempt as follows:
+	</p>
+	<ul>
+		<li>The Computer will play a victory tune if you guess the correct sequence.</li>
+		<li>If 2 positions are correct, buttons 2 and 1 will flash.</li>
+		<li>If only 1 position is correct, button 1 will flash.</li>
+		<li>If no positions in the sequence were correctly guessed, the computer will flash the correct sequence, then play 4 notes.</li>
+	</ul>
 </body>
 </html>
