@@ -1,5 +1,9 @@
 Version pre-Alpha
 - CHANGES
+	Complete initial Dynamic Documentation
+
+Version pre-Alpha
+- CHANGES
 	Fire Away
 		Complete initial logic for playable game.
 
